# physical_ai_tools

./: .gitignore  .gitmodules  README.md
.github/workflows/: ros-ci.yml
data_collector/: CHANGELOG.rst  package.xml  setup.py
data_collector/config/: joint_order.yaml  joint_order_omx.yaml
data_collector/data_collector/: topic_to_data.py  topic_to_data_omx.py  trajectory_stamper.py  trajectory_stamper_inspire.py
data_collector/launch/: data_collector.launch.py  data_collector_omx.launch.py
docker/: .gitignore  Dockerfile  container.sh  docker-compose.yml  start.sh
install/: local_setup.sh  setup.sh
log/: latest_build
physical_ai_interfaces/: CHANGELOG.rst  CMakeLists.txt  package.xml
physical_ai_interfaces/msg/: BrowserItem.msg  RecordingStatus.msg  TaskInfo.msg  TaskStatus.msg  TrainingInfo.msg  TrainingStatus.msg
physical_ai_interfaces/srv/: BrowseFile.srv  GetHFUser.srv  GetImageList.srv  GetPolicyList.srv  GetRobotTypeList.srv  SendCommand.srv  SendRecordingCommand.srv  SendTrainingCommand.srv  SetHFUser.srv  SetRobotType.srv
physical_ai_manager/: .gitignore  CHANGELOG.rst  Dockerfile  README.md  package-lock.json  package.json  package.xml  setup.cfg  setup.py
physical_ai_manager/install/: setup.bash  (+3 more)
physical_ai_server/: CHANGELOG.rst  Dockerfile  Dockerfile.amd64  Dockerfile.arm64  enhanced_act_config.yaml  package.xml  setup.py  test_inference.py
physical_ai_tools/: CHANGELOG.rst  package.xml
policy_to_trajectory/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
robot_operation_manager/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
(+159 files in other folders)
